# listo

./: .gitignore  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  changelog.md  listo.py  pyproject.toml
.github/workflows/: python-ci.yml  python-package-ci.yml
src/listo/: __init__.py  main.py
tests/: test_listo.py
utils/: update_changelog.py
