# Build system
# ------------

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Main project table
# ------------------

[project]
name = "listo"
version = "0.4.1"
description = "An improved version of the List type"
readme = "README.md"
authors = [
  {name = "Daniel Roy Greenfeld", email = "daniel@feldroy.com"}
]
maintainers = [
  {name = "Daniel Roy Greenfeld", email = "daniel@feldroy.com"}
]
classifiers = [

]
license = {text = "MIT"}

# PyPI sidebar URLs
# -----------------

[project.urls]
bugs = "https://github.com/pydanny/listo/issues"
changelog = "https://github.com/pydanny/listo/blob/master/CHANGELOG.md"
homepage = "https://github.com/pydanny/listo"

# Optional dependencies
# ---------------------

[project.optional-dependencies]
test = [
    "black",  # code auto-formatting
    "coverage",  # testing
    "isort",  # code auto-formatting
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

# Where is my code
# ----------------

[tool.setuptools]
package-dir = {"" = "src"}

# Isort
# -----

[tool.isort]
line_length = 99
profile = "black"
default_section = "THIRDPARTY"
lines_after_imports = 2

# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"
