# Main project table
# ------------------

[project]
name = "listo"
version = "0.7.1"
description = "An improved version of the List built-in"
readme = "README.md"
requires-python = ">= 3.10"
authors = [
  {name = "Daniel Roy Greenfeld", email = "daniel@feldroy.com"},
  {name = "Audrey M. Roy Greenfeld", email = "audrey@feldroy.com"}
]
maintainers = [
  {name = "Daniel Roy Greenfeld", email = "daniel@feldroy.com"},
  {name = "Audrey M. Roy Greenfeld", email = "audrey@feldroy.com"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",  
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",

]
license = {text = "MIT"}

# PyPI sidebar URLs
# -----------------

[project.urls]
bugs = "https://github.com/pydanny/listo/issues"
changelog = "https://github.com/pydanny/listo/blob/master/CHANGELOG.md"
homepage = "https://github.com/pydanny/listo"

# Optional dependencies
# ---------------------

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty",  # type checking    
]

# Where is my code
# ----------------

# [tool.setuptools]
# package-dir = {"" = "src"}


# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"


[tool.uv]
package = true